Do not rely on the current profile for no-media detection for two reasons: 1. I encoutered at least one Plextor drive that returns a NO-MEDIA profile for CD-R 2. If there is no media inserted every drive fails the unit ready test. So the profile    is irrelevant in that case anyway.

BUG: 139359

svn path=/trunk/extragear/multimedia/k3b/; revision=621643